Upload excel file

--- a/PCPersonnel/Pages/Index.cshtml
+++ b/PCPersonnel/Pages/Index.cshtml
@@ -5,8 +5,10 @@
 <header>
     <h1>PC Personnel</h1>
 </header>
-    <main>
-        <form method="post" action="/">
+<main>
+    <form method="post" enctype="multipart/form-data">
+        <input type="file" name="ExcelFile" />
 
-        </form>
-    </main>
+        <button type="submit">Submit</button>
+    </form>
+</main>
