Uploading excel file works a bit

--- a/PCPersonnel/Pages/Index.cshtml
+++ b/PCPersonnel/Pages/Index.cshtml
@@ -8,7 +8,7 @@
 </header>
 <main>
     <form method="post" enctype="multipart/form-data">
-        <input type="file" name="ExcelFile" />
+        <input type="file" name="excelFile" />
 
         <button type="submit">Mettre à jour</button>
     </form>
