--- a/PCPersonnel/Pages/Person.cshtml
+++ b/PCPersonnel/Pages/Person.cshtml
@@ -7,4 +7,7 @@
     <header>
         <h1>@this.Model.Person.FirstName @this.Model.Person.LastName</h1>
     </header>
+    <body>
+
+    </body>
 }
