--- a/PCPersonnel/Pages/Person.cshtml
+++ b/PCPersonnel/Pages/Person.cshtml
@@ -129,5 +129,38 @@
                 }
             </dl>
         </section>
+
+        <section class="presence">
+            <h2>Présence</h2>
+            @if (this.Model.Person.Presences != null)
+            {
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Convoqué?</th>
+                            <th>Présence</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var entry in this.Model.Person.Presences)
+                        {
+                            <tr>
+                                <td>@entry.Date.ToString("dd.MM.yyyy")</td>
+                                @if (entry.Called)
+                                {
+                                    <td>Oui</td>
+                                }
+                                else
+                                {
+                                    <td>Non</td>
+                                }
+                                <td>@entry.Presence</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+        </section>
     </main>
 }
