--- a/PCPersonnel/Pages/Index.cshtml
+++ b/PCPersonnel/Pages/Index.cshtml
@@ -12,4 +12,9 @@
 
         <button type="submit">Mettre à jour</button>
     </form>
+
+    <h2>Liens</h2>
+    <ul>
+        <li><a href="/People">Personnes</a></li>
+    </ul>
 </main>
