--- a/PCPersonnel/Pages/Index.cshtml
+++ b/PCPersonnel/Pages/Index.cshtml
@@ -16,5 +16,6 @@
     <h2>Liens</h2>
     <ul>
         <li><a href="/People">Personnes</a></li>
+        <li><a href="/Stats?date=@(DateTime.Now.Date.ToString("yyyy-MM-dd"))">Stats</a></li>
     </ul>
 </main>
