Roll calls listing

--- a/PCPersonnel/Pages/Index.cshtml
+++ b/PCPersonnel/Pages/Index.cshtml
@@ -17,5 +17,6 @@
     <ul>
         <li><a href="/People">Personnes</a></li>
         <li><a href="/Stats?date=@(DateTime.Now.Date.ToString("yyyy-MM-dd"))">Stats</a></li>
+        <li><a href="/RollCalls?date=@(DateTime.Now.Date.ToString("yyyy-MM-dd"))">Listes d'appel</a></li>
     </ul>
 </main>
