--- a/PCPersonnel/Pages/RollCall.cshtml
+++ b/PCPersonnel/Pages/RollCall.cshtml
@@ -7,7 +7,7 @@
     <header>
         <h1>Liste d'appel - @this.Model.RollCall.Entry le @this.Model.RollCall.Date.ToString("dd.MM.yyyy")</h1>
     </header>
-    <main>
+    <main class="rollcall">
         @if (this.Model.RollCall.Presences != null)
         {
             <table>
