Adding Vehicle type

--- a/PCPersonnel/Pages/Index.cshtml
+++ b/PCPersonnel/Pages/Index.cshtml
@@ -18,5 +18,6 @@
         <li><a href="/People">Personnes</a></li>
         <li><a href="/Stats?date=@(DateTime.Now.Date.ToString("yyyy-MM-dd"))">Stats</a></li>
         <li><a href="/RollCalls?date=@(DateTime.Now.Date.ToString("yyyy-MM-dd"))">Listes d'appel</a></li>
+        <li><a href="/Vehicles">Véhicules</a></li>
     </ul>
 </main>
