--- a/PCPersonnel/Pages/Shared/_Layout.cshtml
+++ b/PCPersonnel/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="site.css" />
 </head>
 <body>
+    <nav>
+        <partial name="_LoginPartial" />
+    </nav>
     @RenderBody()
 </body>
 </html>
